# restaurovani

./: .eslintrc.js  .gitignore  .pdm-python  README.md  invenio.cfg  jsconfig.json  oarepo.yaml  package-lock.json  pyproject.toml  requirements.txt  variables
docker/: Dockerfile.production  development.crt  development.key  (+1 more)
local/restoration-common/: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
local/restoration-common/restoration_common/: cli.py
local/restoration-common/restoration_common/fixtures/: catalogue.yaml  convert_old_vocabularies.py  load_modified_vocabularies_lr_2023_10.py  to_xlsx.py
local/restoration-common/restoration_common/fixtures/files/: Colors.yaml  Institutions.yaml  StylePeriods.yaml  WorkTypes.yaml
local/restoration-common/restoration_common/fixtures/original_files/: ExaminationMethods.yaml  ItemTypes.yaml  Requestors.yaml  RestorationMethods.yaml
local/restoration-common/restoration_common/old_data/: download_old_data.py
local/restoration-common/restoration_common/old_data/data/: catalogue.yaml  data.yaml
models/restoration/: custom_fields.yaml  files.yaml  mapping_settings.yaml  metadata.yaml  model.yaml  restoration_object.yaml  restoration_work.yaml  setup.cfg
models/restoration/data/: sample_data.yaml
models/restoration/restoration/: config.py  ext.py  proxies.py
models/restoration/restoration/alembic/: restoration_1_create_restoration_branch_for_.py  restoration_2_initial_revision.py
models/restoration/restoration/files/: api.py  models.py
models/restoration/restoration/files/dumpers/: edtf.py
models/restoration/restoration/files/mappings/os-v2/restoration_file/: restoration_file-1.0.0.json
models/restoration/restoration/models/: files.json  records.json  ui.json
models/restoration/restoration/records/: api.py  dumper.py  models.py  multilingual_dumper.py
models/restoration/restoration/records/dumpers/: dumper.py  edtf.py
models/restoration/restoration/records/jsonschemas/: restoration-1.0.0.json
models/restoration/restoration/records/mappings/os-v2/restoration/: restoration-1.0.0.json  restoration_draft-1.0.0.json
models/restoration/restoration/resources/files/: config.py  resource.py  ui.py
models/restoration/restoration/resources/records/: config.py  resource.py  ui.py
models/restoration/restoration/services/files/: config.py  permissions.py  schema.py  service.py  ui_schema.py
models/restoration/restoration/services/files/published/: config.py  service.py
models/restoration/restoration/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
models/restoration/restoration/services/records/published/: config.py  service.py
models/restoration/restoration/translations/: messages.pot
models/restoration/restoration/translations/cs/LC_MESSAGES/: messages.mo  messages.po
models/restoration/restoration/views/draft_files/: api.py  app.py
models/restoration/restoration/views/files/: api.py  app.py
models/restoration/restoration/views/records/: api.py  app.py
models/restoration/tests/: conftest.py  test_resource.py  test_service.py
models/restoration/tests/files/: conftest.py  test_file_resources.py
sites/restaurovani-site/: .check.ok  .gitignore  README.md  build.sh  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  pyproject.toml  requirements.txt  variables
sites/restaurovani-site/assets/less/: theme.config  theme.less
sites/restaurovani-site/assets/less/site/globals/: site.overrides
sites/restaurovani-site/docker/: Dockerfile.production
sites/restaurovani-site/docker/nginx/: test.crt  test.key
sites/restaurovani-site/docker/pgadmin/: servers.json
sites/restaurovani-site/site/: .gitkeep  setup.cfg
sites/restaurovani-site/site/restaurovani_site/: views.py  webpack.py
sites/restaurovani-site/site/restaurovani_site/templates/semantic-ui/invenio_theme/: page_cover.html
sites/restaurovani-site/site/restaurovani_site/templates/semantic-ui/oarepo_ui/: detail.html  footer.html  header.html  javascript.html
sites/restaurovani-site/site/restaurovani_site/templates/semantic-ui/restaurovani_site/: base_page.html  frontpage.html  searchbar.html
ui/restoration-ui/: README.md  setup.cfg
ui/restoration-ui/restoration_ui/: __init__.py  config.py  ext.py  proxies.py  views.py
ui/restoration-ui/restoration_ui/resources/: components.py  config.py  resource.py
ui/restoration-ui/restoration_ui/templates/semantic-ui/restoration_ui/: CreateObjectForm.html.jinja  Detail.html.jinja  EditObjectForm.html.jinja  EditObjectForm.jinja  Main.html.jinja  Search.html.jinja  Sidebar.html.jinja  deposit.html  detail.html  main.html  search.html
ui/restoration-ui/restoration_ui/theme/: webpack.py
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/: custom-components.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/createform/: CreateObjectForm.jsx  index.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/createform/form/: CreateObjectForm.jsx  index.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/editform/: EditObjectForm.jsx  index.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/editform/components/: BasicInfo.jsx  FileStat.jsx  PartsInfo.jsx  RestorationWork.jsx  Uploader.jsx
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/forms/components/: CreateObjectForm.jsx  EditObjectForm.jsx  KeyWordsInput.jsx  PublishButton.jsx  SaveButton.jsx  index.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/forms/deposit/: DepositForm.jsx  DepositValidationSchema.jsx  reducer.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/gallery/: Carousel.jsx  index.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/js/restoration_ui/search/: index.js  renderAggs.js
ui/restoration-ui/restoration_ui/theme/assets/semantic-ui/translations/restoration_ui/: i18next-scanner.config.js
(+298 files in other folders)
