[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo[s3]==12.*",
    "python-dotenv",
]
requires-python = ">=3.9,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
common = "common.assets.webpack:theme"
objects = "ui.objects.theme.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
ui_objects = "ui.objects:create_blueprint"
objects = "objects.views.records.app:create_app_blueprint"
objects_file = "objects.views.files.app:create_app_blueprint"
objects_file_draft = "objects.views.draft_files.app:create_app_blueprint"

[project.entry-points."invenio_base.api_apps"]
objects = "objects.ext:ObjectsExt"

[project.entry-points."invenio_base.apps"]
objects = "objects.ext:ObjectsExt"

[project.entry-points."invenio_db.alembic"]
objects = "objects:alembic"

[project.entry-points."invenio_db.models"]
objects = "objects.records.models"
objects_file = "objects.files.models"

[project.entry-points."invenio_base.api_blueprints"]
objects = "objects.views.records.api:create_api_blueprint"
objects_file = "objects.views.files.api:create_api_blueprint"
objects_file_draft = "objects.views.draft_files.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
objects = "objects.records.mappings"
objects_file = "objects.files.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
objects = "objects.records.jsonschemas"

[project.entry-points."oarepo.models"]
objects = "objects.models:records.json"
objects_file = "objects.models:files.json"

[project.entry-points."invenio_i18n.translations"]
translations = "common"
objects = "objects"
objects_file = "objects"

[project.entry-points."oarepo.ui"]
objects = "objects.models:ui.json"
objects_file = "objects.models:ui.json"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
