[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "PyMuPDF",
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "oarepo-published-service>=1.0.0",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo[s3]==12.*",
    "python-dotenv",
]
requires-python = ">=3.10,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
objects = "ui.objects.webpack:theme"
components = "ui.components.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
ui_objects = "ui.objects:create_blueprint"
objects = "objects.views.records.app:create_app_blueprint"
objects_file = "objects.views.files.app:create_app_blueprint"
objects_file_draft = "objects.views.draft_files.app:create_app_blueprint"
objects_requests = "objects.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_base.api_apps"]
objects = "objects.ext:ObjectsExt"

[project.entry-points."invenio_base.apps"]
objects = "objects.ext:ObjectsExt"

[project.entry-points."invenio_db.alembic"]
objects = "common:alembic"

[project.entry-points."invenio_db.models"]
objects = "objects.records.models"
objects_file = "objects.files.models"
objects_file_draft = "objects.files.models"

[project.entry-points."invenio_base.api_blueprints"]
objects = "objects.views.records.api:create_api_blueprint"
objects_file = "objects.views.files.api:create_api_blueprint"
objects_file_draft = "objects.views.draft_files.api:create_api_blueprint"
objects_requests = "objects.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
objects = "objects.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
objects = "objects.records.jsonschemas"

[project.entry-points."oarepo.models"]
objects = "objects.models:records.json"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
objects = "objects"

[project.entry-points."oarepo.ui"]
objects = "objects.models:ui.json"
objects_file = "objects.models:ui.json"

[project.entry-points."oarepo.fixtures"]
fixtures = "fixtures"

[project.entry-points."invenio_requests.types"]
objects_delete_record = "objects.records.requests.delete_record.types:DeleteRecordRequestType"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
