[metadata]
name = restoration_common
version = 0.1.0
description = Common libraries for restoration repository
long_description = file: README.rst
author = Miroslav Simek
author_email = miroslav.simek@cesnet.cz
url = https://restaurovani.vscht.cz
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    oarepo>=11,<12

[options.extras_require]
testing =
    pytest
develop =
    autoflake
    isort
    black
    wheel

[options.packages.find]
exclude =
    tests

[wheel]
universal = 1

[options.entry_points]
oarepo.fixtures = restoration_common = restoration_common.fixtures