

[metadata]
name = restoration
version = 1.0.0
description = Repository model for Restoration
authors = 


[options]
python = >=3.9
install_requires =
    oarepo>=11,<12
    oarepo-runtime>=1.0.0
    deepmerge>=1.1.0
    oarepo-vocabularies>=2.0.0
    invenio-drafts-resources>=1.0.4
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = restoration = restoration.ext:RestorationExt
invenio_base.apps = restoration = restoration.ext:RestorationExt
invenio_db.alembic = restoration = restoration:alembic
invenio_db.models =
    restoration = restoration.records.models
    restoration_file = restoration.files.models
invenio_base.api_blueprints =
    restoration = restoration.views.records.api:create_api_blueprint
    restoration_file = restoration.views.files.api:create_api_blueprint
    restoration_file_draft = restoration.views.draft_files.api:create_api_blueprint
invenio_base.blueprints =
    restoration = restoration.views.records.app:create_app_blueprint
    restoration_file = restoration.views.files.app:create_app_blueprint
    restoration_file_draft = restoration.views.draft_files.app:create_app_blueprint
invenio_search.mappings =
    restoration = restoration.records.mappings
    restoration_file = restoration.files.mappings
invenio_jsonschemas.schemas = restoration = restoration.records.jsonschemas
oarepo.models =
    restoration = restoration.models:records.json
    restoration_file = restoration.models:files.json
invenio_i18n.translations =
    restoration = restoration
    restoration_file = restoration
oarepo.ui =
    restoration = restoration.models:ui.json
    restoration_file = restoration.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
