[project]
name = "restaurovani-site-repository"
version = "1.0.0"
description = ""
packages = []
authors = [
    { name = "miroslav.simek@cesnet.cz", email = "miroslav.simek@cesnet.cz" },
]
dependencies = [
    "oarepo>=11,<12",
    "site @ file:///${PROJECT_ROOT}/site",
]
requires-python = ">=3.9,<3.11"
