[project]
name = "restaurovani-site-repository"
version = "1.0.0"
description = ""
packages = []
authors = [
    { name = "miroslav.simek@cesnet.cz", email = "miroslav.simek@cesnet.cz" },
]
dependencies = [
    "oarepo>=11,<12",
    "restoration @ file:///${PROJECT_ROOT}/../../models/restoration",
    "restoration-common @ file:///${PROJECT_ROOT}/../../local/restoration-common",
    "site @ file:///${PROJECT_ROOT}/site",
]
requires-python = ">=3.9,<3.11"
