
[metadata]
name = restoration-ui
version = attr: restoration_ui.__version__
description = Application package for restoration
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar restoration
license = MIT
author = 
author_email = 
platforms = any
url = 
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    oarepo-ui>=4.0.10
    # restoration

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    restoration_ui = restoration_ui.ext:RestorationUiExtension
invenio_base.api_apps =
    restoration_ui = restoration_ui.ext:RestorationUiExtension
invenio_assets.webpack =
    restoration_ui_theme = restoration_ui.theme.webpack:theme
invenio_base.blueprints =
    restoration_ui = restoration_ui.views:create_blueprint


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
