
[metadata]
name = restaurovani-site

[options]
install_requires =
    oarepo-runtime
    oarepo-ui
    python-dotenv

    oarepo-vocabularies


[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    restaurovani_site_views = restaurovani_site.views:create_blueprint
invenio_assets.webpack =
    restaurovani_site_theme = restaurovani_site.webpack:theme
